bugs: adjusted line-height and reduce block spacing

--- a/src/pages/text-to-graphics/text-to-graphics.scss
+++ b/src/pages/text-to-graphics/text-to-graphics.scss
@@ -37,6 +37,7 @@
   text-align: left;
   transform: rotate(45deg);
   font-family: 'Megafont';
+  line-height: 0.76;
 }
 
 .qr-text-top {
@@ -147,6 +148,8 @@ button {
   transform: rotate(45deg);
   font-family: 'Megafont', sans-serif;
   font-display: fallback;
+  line-height: 0.76;
+
 
 }
 
